--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="normalize.css">
     </head>
     <body>        
         <h1>Google</h1>
