--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="#" class="nav-bar-link">Gmail</a>
                     <a href="#" class="nav-bar-link">Images</a>
                     <a href="#" class="nav-bar-link">Apps</a>
-                    <button class="btn-blue">Sign in</button>
+                    <button class="btn-blue nav-bar-link"><strong>Sign in</strong></button>
                 </div>
             </nav>
             <main class="center">
