Style main content

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
                     <a href="#" class="nav-bar-link">Gmail</a>
                     <a href="#" class="nav-bar-link">Images</a>
                     <a href="#" class="nav-bar-link">Apps</a>
-                    <button class="btn-blue nav-bar-link"><strong>Sign in</strong></button>
+                    <button class="btn btn-blue nav-bar-link"><strong>Sign in</strong></button>
                 </div>
             </nav>
-            <main class="center">
-                <header>
+            <main class="main">
+                <header class="main-section">
                     <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
                 </header>
-                <div id="searchbar">
+                <div id="searchbar" class="main-section">
                     <span>&#128269;</span><input type="text" name="query" id="">
                 </div>
-                <div>
-                    <button class="btn-gray">Google Search</button>
-                    <button class="btn-gray">I'm Feeling Lucky</button>
+                <div class="main-section">
+                    <button class="btn btn-gray">Google Search</button>
+                    <button class="btn btn-gray">I'm Feeling Lucky</button>
                 </div>
             </main>
             <footer class="nav-bar">
